# Handwriting-Recognition-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  counter.py  inference.py  output_text.txt  plot.py  smth.py  yay.py
Notebooks/: notebook.ipynb
models/HandPrint/: args.yaml
models/HandPrint2/: args.yaml
models/HandPrint3/: args.yaml
models/HandPrint4/: args.yaml  events.out.tfevents.1735655115.Aneesh.31068.0
models/HandPrint5/: args.yaml  events.out.tfevents.1735655172.Aneesh.10920.0  results.csv
models/HandPrint6/: args.yaml  events.out.tfevents.1735661048.Aneesh.8992.0  results.csv
models/HandPrint7/: args.yaml  events.out.tfevents.1735661901.Aneesh.10616.0  results.csv
src/: helper.py  main.py
src/DataLoading/: DatasetLoader.py  loader.py  preprocessing.py
src/Implementation/: CMakeLists.txt  Segmentation.py  YOLOBasedSegmentation.py  smth.py
src/Implementation/ImageProcessing/: ImageProcessing.py  __init__.py
src/Implementation/ImageProcessing/cpp/: Binarization.hpp  ImageProcessing.cpp  ImageProcessing.hpp  LineSegmentation.hpp  Scanner.hpp  WordSegmentation.hpp  bindings.cpp  main.cpp
src/Implementation/Models/: CNN_BiLSTM_CTC.py
src/Implementation/Training/: trainCNN_BiLSTM_CTConIAM.py
